# async_fn.rs

./: Cargo.toml  README.md
.github/workflows/: CI.yml  future-proof.yml
src/: compile_fail_tests.md  lib.rs
src/proc_macros/: Cargo.toml  mod.rs
tests/: main.rs
