[lib]
proc-macro = true
path = "mod.rs"

[package]
name = "async_fn-proc_macros"
authors = [
    "Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>"
]
version = "0.0.1"  # Keep in sync
edition = "2018"

license = "Zlib OR MIT OR Apache-2.0"
description = "Collection of helper annotations and macros for concise and yet explicit `async fn` signatures"
repository = "https://github.com/danielhenrymantilla/async_fn.rs"
documentation = "https://docs.rs/async_fn"
keywords = ["async", "signature", "future", "trait", "bounds"]

[dependencies]
proc-macro2.version = "1.0.0"
quote.version = "1.0.0"
syn.version = "1.0.0"
syn.features = [
    "full",
]
